ops/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datashare
  labels:
    app.kubernetes.io/name: datashare
